sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:3: error: not found: value ecart
  ecart = getNombreValeurs()
  ^AlgCombSort:8: error: not found: value ecart
    if(ecart>1){
       ^AlgCombSort:9: error: not found: value ecart
      ecart = ecart/1.3
      ^AlgCombSort:12: error: not found: value ecart
    while(i+ecart< getNombreValeurs()){
            ^AlgCombSort:13: error: not found: value ecart
      if(plusPetit(i+ecart,i)){
                     ^AlgCombSort:14: error: not found: value ecart
        echange(i,i+ecart)
                    ^AlgCombSort:19: error: not found: value ecart
  }while(ecart>1 || ech )
         ^